# heca-lib

./: Cargo.toml  README.md
src/: lib.rs
src/convert/: date.rs  mod.rs  year.rs
src/convert/year/: backend.rs
src/daily_study/: daf_yomi.rs  mod.rs  yerushalmi_yomi.rs
src/daily_study/rambam/: mod.rs  one_chapter.rs  three_chapters.rs
src/hebrew/: date.rs  mod.rs  year.rs
src/holidays/: chabad_holidays.rs  chol.rs  israeli_holidays.rs  minor_holiday.rs  mod.rs  omer.rs  shabbos.rs  shabbos_mevarchim.rs  special_parsha.rs  yom_tov.rs
src/internal/: calendar.rs  mod.rs
src/prelude/: location.rs  mod.rs
src/secular/: mod.rs
tests/: chanuka_data.rs  rosh_chodesh_adar_data.rs  rosh_chodesh_av_data.rs  rosh_chodesh_cheshvan_data.rs  rosh_chodesh_elul_data.rs  rosh_chodesh_iyyar_data.rs  rosh_chodesh_kislev_data.rs  rosh_chodesh_nissan_data.rs  rosh_chodesh_shvat_data.rs  rosh_chodesh_sivan_data.rs  rosh_chodesh_tamuz_data.rs  rosh_chodesh_teves_data.rs  rosh_hashana_data.rs  sukkos_data.rs  test_chanuka.rs  test_rosh_chodesh_adar.rs  test_rosh_chodesh_av.rs  test_rosh_chodesh_cheshvan.rs  test_rosh_chodesh_elul.rs  test_rosh_chodesh_iyar.rs  test_rosh_chodesh_kislev.rs  test_rosh_chodesh_nissan.rs  test_rosh_chodesh_shvat.rs  test_rosh_chodesh_sivan.rs  test_rosh_chodesh_tammuz.rs  test_rosh_chodesh_teves.rs  test_rosh_hashana.rs  test_sukkos.rs
