[package]
name = "heca-lib"
version = "1.3.1"
authors = ["picked name <ipickedaname@mail.com>"]
edition = "2018"
description = "Hebrew Calendar library"
keywords = ["library", "calendar", "hebrew", "jewish"]
categories = ["date-and-time"]
license = "MIT"
repository = "https://github.com/heca-project/heca-lib"
readme = "README.md"

[badges]
travis-ci = { repository = "heca-project/heca-lib", branch = "master" }
maintenance = { status ="actively-developed"}
is-it-maintained-issue-resolution = {repository = "heca-project/heca-lib"}
is-it-maintained-open-issues = { repository = "heca-project/heca-lib"}




[dependencies]
tinyvec = { version = "*", features = ["alloc"] }
once_cell = "1.3.1"
chrono = "0.4"
num = "0.2"
serde =  { version = "1.0", features = ["derive"] }

[dev-dependencies]
rayon = "1.0"
atoi = "0.3"
criterion = "0.3"


[profile.release]
debug = true
lto = true
